--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-# Compiled Object files
+# C++ objects and libs
+
 *.slo
 *.lo
 *.o
-
-# Compiled Dynamic libraries
+*.a
+*.la
+*.lai
 *.so
+*.dll
 *.dylib
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+# Qt-es
 
-# user file
-*.user
+*.pro.user
+*.pro.user.*
+moc_*.cpp
+qrc_*.cpp
+Makefile
+*-build-*
